# dbx-toolkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  databricks.yml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  semantic-release-uv.yml  semantic-release.yml
docs/: commands.md  dbx_toolkit.md  getting_started.md  index.md
docs/api/dbx_toolkit/: index.html  main.html
docs/tests/: test_configuration.md
docs/tests/coverage/: class_index.html  function_index.html  index.html  status.json  z_05c5a673803a19f1___init___py.html  z_05c5a673803a19f1_main_py.html
fixtures/: notebook_template.py.jinja  notebooks.csv
fixtures/output/: payments.py  payments_inc.py
notebooks/: dlt_flows.py  dlt_hive_metastore_tables.py  dlt_ingest.py  file_sizes.py  hello_revodata.py  workspace_information.py
resources/: template_dlt_pipeline.yml  template_job.yml
scripts/: get-databricks-creds-2.sh  get-databricks-creds.sh
src/dbx_toolkit/: __init__.py  deploy.py  diagnostics.py  dlt_flows.py  generate_hierarchy.py  ingestion.py  main.py  notebook_template.py.jinja  notebooks.csv
src/python_toolkit/: __init__.py  compare_json.py  update_version.py
tests/: default_test.py
